Fixed div ohmygodjustdowhatiwant so that it...actually did waht I wanted. It's hacky and sort of jacked, but I wanted the photographs to be centered in the 60% width that I had set for the rest of the content. The only way I could figure out how to do that was to wrap all the pictures in a <p> tag. I don't know. This was very hard.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -276,7 +276,7 @@ img {
   margin-left: .1em;
 }
 
-.ohmygodjustdowhatiwant {
+.ohmygodjustdowhatiwant p {
   font-size: 1em;
   padding-left: 1.7em;
   width: 60%;
